[project]
name = "lalonde"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dowhy>=0.14",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.8",
    "matplotlib-inline>=0.2.1",
    "pandas>=2.3.3",
    "seaborn>=0.13.2",
]
